# assignment-1-ai-day-8

./: .dockerignore  Makefile  README.md  dev.db  pyproject.toml
alembic/: env.py
alembic/versions/: fc1e9f41f86d_init_db.py
app/: database.py  main.py  schema.py  settings.py
app/routes/: books.py
